--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,33 +1,11 @@
-<style>
-    .btn-search {
-        background-color: #fe424d;
-        color: #fff;
-        border-radius: 25px;
-        padding: 0 1rem 0 1rem;
-    }
-
-    .btn-search:hover {
-        background-color: #fe424d;
-        color: #fff;
-    }
-
-    .btn-search i {
-        display: inline;
-        margin-right: 0.5rem;
-    }
-
-    .search-inpt {
-        border-radius: 25px;
-        padding: 0.5rem 3rem 0.5rem 3rem;
-        /* font-size: 0.8rem; */
-    }
-</style>
-
-<nav class="navbar navbar-expand-md bg-body-litgh border-bottom sticky-top">
+<nav class="navbar navbar-expand-lg bg-body-litgh border-bottom sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/"><i class="fa-brands fa-squarespace"></i> <b>BreezBnB</b></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
-            <span class="navbar-toggler-icon"></span>
+        <a class="navbar-brand" href="/"><i class="fa-brands fa-squarespace"></i> <b>BreezeBnB</b></a>
+        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button"
+            data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+            <span class="toggler-icon top-bar"></span>
+            <span class="toggler-icon middle-bar"></span>
+            <span class="toggler-icon bottom-bar"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
