--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -48,9 +48,57 @@
                             required>
                         <div class="invalid-feedback">Please enter a valid location</div>
                     </div>
+                    <div class="mb-3">
+                        <label>Select Categories</label>
+                        <div class="d-flex flex-wrap gap-2">
+                            <div>
+                                <input type="checkbox" id="rooms" name="listing[category][]" value="Rooms">
+                                <label for="rooms">Rooms</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="iconic_cities" name="listing[category][]"
+                                    value="Iconic_Cities">
+                                <label for="iconic_cities">Iconic Cities</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="mountains" name="listing[category][]" value="Mountains">
+                                <label for="mountains">Mountains</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="castles" name="listing[category][]" value="Castles">
+                                <label for="castles">Castles</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="amazing_pools" name="listing[category][]"
+                                    value="Amazing_Pools">
+                                <label for="amazing_pools">Amazing Pools</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="camping" name="listing[category][]" value="Camping">
+                                <label for="camping">Camping</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="farms" name="listing[category][]" value="Farms">
+                                <label for="farms">Farms</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="arctic" name="listing[category][]" value="Arctic">
+                                <label for="arctic">Arctic</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="domes" name="listing[category][]" value="Domes">
+                                <label for="domes">Domes</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="beaches" name="listing[category][]" value="Beaches">
+                                <label for="beaches">Beaches</label>
+                            </div>
+                        </div>
+                    </div>
                     <!-- Submit Button -->
                     <button class="btn btn-dark add-btn d-block mx-start mt-4 mb-3" style="width: 100px;">Add</button>
-                </form>
             </div>
+            </form>
         </div>
+    </div>
     </div>
