--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -13,23 +13,31 @@
             </div>
 
             <div class="navbar-nav ms-auto">
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2 search-inpt" type="search" placeholder="Search destination"
-                        aria-label="Search">
-                    <button class="btn btn-search" type="submit"><i
-                            class="fa-solid fa-magnifying-glass"></i>Search</button>
-                </form>
+                <% if(showSearchBar) { %>
+                    <form class="d-flex" role="search" action="/listings" method="GET">
+                        <input class="form-control me-2 search-inpt" type="search" placeholder="Search destination"
+                            aria-label="Search" name="query" value="<%= query %>">
+                        <button class="btn btn-search" type="submit"><i
+                                class="fa-solid fa-magnifying-glass"></i>Search</button>
+                    </form>
+                    <% } %>
             </div>
 
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/listings/new">List your home</a>
-                <%if(!currentUser) {%>
-                    <a class="nav-link " href="/signup"><b>SignUp</b></a>
-                    <a class="nav-link" href="/login"><b>Login</b></a>
+                <% if(showNewlistingOption) {%>
+                    <a class="nav-link" href="/listings/new">List your home</a>
                     <% } %>
-                        <% if(currentUser) {%>
-                            <a class="nav-link" href="/logout"><b>Logout</b></a>
-                            <% } %>
+                        <%if(!currentUser) {%>
+                            <% if(showSignup){ %>
+                                <a class="nav-link " href="/signup"><b>SignUp</b></a>
+                                <% } %>
+                                    <% if(showLogin) {%>
+                                        <a class="nav-link" href="/login"><b>Login</b></a>
+                                        <% } %>
+                                            <% } %>
+                                                <% if(currentUser) {%>
+                                                    <a class="nav-link" href="/logout"><b>Logout</b></a>
+                                                    <% } %>
             </div>
         </div>
     </div>
