--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,106 +1,159 @@
-<% layout("/layouts/boilerplate") %>
+<%- include("../includes/head.ejs") %>
+    </head>
 
-    <div id="filters">
-        <div class="filter-wrapper">
-            <div class="filters-parrent">
-                <div class="filter">
-                    <div><i class="fa-solid fa-fire"></i></div>
-                    <p>Trending</p>
-                </div>
-                <div class="filter">
-                    <div><i class="fa-solid fa-bed"></i></div>
-                    <p>Rooms</p>
-                </div>
-                <div class="filter">
-                    <div><i class="fa-solid fa-city"></i></div>
-                    <p>Iconic Cities</p>
-                </div>
-                <div class="filter">
-                    <div><i class="fa-solid fa-mountain-sun"></i></div>
-                    <p>Mountains</p>
-                </div>
-                <div class="filter">
-                    <div><i class="fa-brands fa-fort-awesome"></i></div>
-                    <p>Castles</p>
-                </div>
-                <div class="filter">
-                    <div><i class="fa-solid fa-person-swimming"></i></div>
-                    <p>Amazing Pools</p>
-                </div>
-                <div class="filter">
-                    <div><i class="fa-solid fa-campground"></i></div>
-                    <p>Camping</p>
-                </div>
-                <div class="filter">
-                    <div><i class="fa-solid fa-wheat-awn"></i></div>
-                    <p>Farms</p>
-                </div>
-                <div class="filter">
-                    <div><i class="fa-solid fa-snowman"></i></div>
-                    <p>Arctic</p>
-                </div>
-                <div class="filter">
-                    <div><i class="fa-solid fa-landmark-dome"></i></div>
-                    <p>Domes</p>
-                </div>
-                <div class="filter">
-                    <div><i class="fa-solid fa-umbrella-beach"></i></div>
-                    <p>Beaches</p>
-                </div>
-            </div>
-        </div>
-        <div class="tax-toggle-wrapper">
-            <div class="tax-toggle">
-                <div class="form-check-reverse form-switch">
-                    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container my-4">
-        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4 mt-3">
-            <% for(let list of allListings) { %>
-                <div class="col">
-                    <a href="/listings/<%= list._id %>" class="listing-link text-decoration-none">
-                        <div class="card listing-card shadow-sm border-0">
-                            <img src="<%= list.image.url %>" class="card-img-top " alt="Listing img"
-                                style="height: 20rem; object-fit: cover;">
-                            <div class="card-img-overlay"></div>
-                            <div class="card-body">
-                                <p class="card-text">
-                                    <b class="text-dark">
-                                        &nbsp;&nbsp; <%= list.title %>
-                                    </b>
-                                    <br>
-                                    &nbsp;&nbsp; &#8377; <%= list.price.toLocaleString("en-IN") %> /
-                                        Night
-                                        <i class="tax-info  text-muted small">+18% GST</i>
-                                        <br>
-                                        <br>
-                                        <!-- <div class="temp">
-                                    </div> -->
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+    <body>
+        <% if (useLayout !==false) { %>
+            <%- include("../includes/navbar.ejs") %>
                 <% } %>
-        </div>
-    </div>
+                    <div class="container">
+                        <%- include("../includes/flash.ejs") %>
 
+                            <div id="filters">
+                                <div class="filter-wrapper">
+                                    <div class="filters-parrent">
+                                        <div class="filter" onclick="applyfilter('Rooms')">
+                                            <div><i class="fa-solid fa-bed"></i></div>
+                                            <p>Rooms</p>
+                                        </div>
+                                        <div class="filter" onclick="applyfilter('Iconic_Cities')">
+                                            <div><i class="fa-solid fa-city"></i></div>
+                                            <p>Iconic Cities</p>
+                                        </div>
+                                        <div class="filter" onclick="applyfilter('Mountains')">
+                                            <div><i class="fa-solid fa-mountain-sun"></i></div>
+                                            <p>Mountains</p>
+                                        </div>
+                                        <div class="filter" onclick="applyfilter('Castles')">
+                                            <div><i class="fa-brands fa-fort-awesome"></i></div>
+                                            <p>Castles</p>
+                                        </div>
+                                        <div class="filter" onclick="applyfilter('Amazing_Pools')">
+                                            <div><i class="fa-solid fa-person-swimming"></i></div>
+                                            <p>Amazing Pools</p>
+                                        </div>
+                                        <div class="filter" onclick="applyfilter('Camping')">
+                                            <div><i class="fa-solid fa-campground"></i></div>
+                                            <p>Camping</p>
+                                        </div>
+                                        <div class="filter" onclick="applyfilter('Farms')">
+                                            <div><i class="fa-solid fa-wheat-awn"></i></div>
+                                            <p>Farms</p>
+                                        </div>
+                                        <div class="filter" onclick="applyfilter('Arctic')">
+                                            <div><i class="fa-solid fa-snowman"></i></div>
+                                            <p>Arctic</p>
+                                        </div>
+                                        <div class="filter" onclick="applyfilter('Domes')">
+                                            <div><i class="fa-solid fa-landmark-dome"></i></div>
+                                            <p>Domes</p>
+                                        </div>
+                                        <div class="filter" onclick="applyfilter('Beaches')">
+                                            <div><i class="fa-solid fa-umbrella-beach"></i></div>
+                                            <p>Beaches</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tax-toggle-wrapper">
+                                    <div class="tax-toggle">
+                                        <div class="form-check-reverse form-switch">
+                                            <input class="form-check-input" type="checkbox" role="switch"
+                                                id="flexSwitchCheckDefault">
+                                            <label class="form-check-label" for="flexSwitchCheckDefault">Display total
+                                                after taxes</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
-    <script>
-        let taxSwitch = document.getElementById("flexSwitchCheckDefault");
-        taxSwitch.addEventListener("click", () => {
-            let taxInfo = document.getElementsByClassName("tax-info");
-            for (info of taxInfo) {
-                if (info.style.display != "inline") {
-                    info.style.display = "inline";
-                } else {
-                    info.style.display = "none"
-                }
-            }
-        })
-    </script>
+                            <div class="container my-4">
+                                <div id="listings-container"
+                                    class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4 mt-3">
+                                    <% if (noResultsMessage) { %>
+                                        <div class="alert alert-info">
+                                            <%= noResultsMessage %>
+                                        </div>
+                                        <% } %>
+                                            <% for(let list of allListings) { %>
+                                                <div class="col">
+                                                    <a href="/listings/<%= list._id %>"
+                                                        class="listing-link text-decoration-none">
+                                                        <div class="card listing-card shadow-sm border-0">
+                                                            <img src="<%= list.image.url %>" class="card-img-top "
+                                                                alt="Listing img"
+                                                                style="height: 20rem; object-fit: cover;">
+                                                            <div class="card-img-overlay"></div>
+                                                            <div class="card-body">
+                                                                <p class="card-text">
+                                                                    <b class="text-dark">
+                                                                        &nbsp;&nbsp; <%= list.title %>
+                                                                    </b>
+                                                                    <br>
+                                                                    &nbsp;&nbsp; &#8377; <%=
+                                                                        list.price.toLocaleString("en-IN") %> /
+                                                                        Night
+                                                                        <i class="tax-info  text-muted small">+18%
+                                                                            GST</i>
+                                                                        <br>
+                                                                        <br>
+                                                                </p>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                                <% } %>
+                                </div>
+                            </div>
+                    </div>
+                    <% if (useLayout !==false) { %>
+                        <%- include("../includes/footer.ejs") %>
+                            <% } %>
+                                <script
+                                    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                                    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                                    crossorigin="anonymous"></script>
+                                <script src="/js/script.js"></script>
+                                <script>
+                                    let taxSwitch = document.getElementById("flexSwitchCheckDefault");
+                                    taxSwitch.addEventListener("click", () => {
+                                        let taxInfo = document.getElementsByClassName("tax-info");
+                                        for (info of taxInfo) {
+                                            if (info.style.display != "inline") {
+                                                info.style.display = "inline";
+                                            } else {
+                                                info.style.display = "none"
+                                            }
+                                        }
+                                    })
+                                    let currentRequest = null;
+                                    function applyfilter(category) {
+                                        const listingsContainer = document.getElementById("listings-container");
+
+                                        if (currentRequest) {
+                                            currentRequest.abort();
+                                        }
+
+                                        const controller = new AbortController();
+                                        const single = controller.signal;
+                                        currentRequest = controller;
+
+                                        listingsContainer.innerHTML = "Loading listings......";
+
+                                        fetch(`/listings?category=${category}`, {
+                                            method: "GET",
+                                            headers: {
+                                                "x-requested-with": "XMLHttpRequest", // Ensure this header is being sent for AJAX requests
+                                            },
+                                            single: single,
+                                        })
+                                            .then(response => response.text())
+                                            .then(data => {
+                                                console.log(data);
+                                                listingsContainer.innerHTML = data;
+                                                currentRequest = null;
+                                            })
+                                            .catch(err => {
+                                                console.log("error while applying filters...", err);
+                                                listingsContainer.innerHTML = "error while loading fistings...";
+                                            })
+                                    }
+                                </script>
